# adventofcode

./: CMakeLists.txt
2021/: CMakeLists.txt
2021/1/: main  main.cpp
2021/1/src/: main.cpp
2021/2/: main  main.cpp
2021/2/src/: main.cpp
2021/3/: main  main.cpp
2021/3/src/: main.cpp
2021/4/src/: main.cpp
2021/5/src/: main.cpp
2022/: 1-main.py  2-main.py  3-main.py  4-main.py  5-main.py  6-main.py  7-main.py  8-main.py
2023/: day_1.py  day_10.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
